<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabForYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strForYou" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTopCharts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTopCharts" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabKids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strKids" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPremium" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCategories" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>